--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "testPackagist",
+    "name": "test/testPackagist",
     "description": "A short description of what your package does",
     "require": {
         "php": ">= 5.3.10"
